--- a/TheAgarwalBlog/assets/css/style.css
+++ b/TheAgarwalBlog/assets/css/style.css
@@ -323,6 +323,7 @@ section {
 # Facts
 --------------------------------------------------------------*/
 .facts {
+  background-color: #e4edf9;
   padding-bottom: 30px;
 }
 .facts .count-box {
