Improved html slightly, renamed section services -> Musings in code

--- a/TheAgarwalBlog/assets/css/style.css
+++ b/TheAgarwalBlog/assets/css/style.css
@@ -595,12 +595,12 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Services
+# musings
 --------------------------------------------------------------*/
-.services .icon-box {
+.musings .icon-box {
   margin-bottom: 20px;
 }
-.services .icon {
+.musings .icon {
   float: left;
   display: flex;
   align-items: center;
@@ -612,30 +612,30 @@ section {
   transition: 0.5s;
   border: 1px solid #149ddd;
 }
-.services .icon i {
+.musings .icon i {
   color: #fff;
   font-size: 24px;
   line-height: 0;
 }
-.services .icon-box:hover .icon {
+.musings .icon-box:hover .icon {
   background: #fff;
 }
-.services .icon-box:hover .icon i {
+.musings .icon-box:hover .icon i {
   color: #149ddd;
 }
-.services .title {
+.musings .title {
   margin-left: 80px;
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
 }
-.services .title a {
+.musings .title a {
   color: #343a40;
 }
-.services .title a:hover {
+.musings .title a:hover {
   color: #149ddd;
 }
-.services .description {
+.musings .description {
   margin-left: 80px;
   line-height: 24px;
   font-size: 14px;
